--- a/Desafio/modulo-02/d010/style.css
+++ b/Desafio/modulo-02/d010/style.css
@@ -7,10 +7,23 @@
     font-size: normal;
 }
 
+  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+
 body{
     background-color: #EBE5C5;
-    margin-top: 0px;
-        
+    margin-top: 0px;    
+}
+
+header > h1 {
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px 0px black;
+    font-family: 'Bebas Neue', sans-serif;
+}
+
+header > p {
+    text-shadow: 2px 2px 0px black;
 }
 
 header{
@@ -21,27 +34,42 @@ header{
     padding-top: 40px;
     min-height: 150px;
     display: block;
+    font-weight: bold;
+    width: auto;
+    display: block;
 }
 
 nav {
-    color: #83E1AD;
     text-align: left;
 }
 
-header > h1 {
-    text-align: center;
-    color: white;
-    
+nav > a {
+    text-decoration: none;
+    color: #83E1AD;
+    font-weight: bold;
+    margin: 0px 20px;
+    text-align: left;  
 }
+
+nav > a:hover {
+    background-color: #2FA866;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    color: #063D1E;
+}
+
 
 main {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0px auto 10px auto;
-    width: 800px;
-    padding: 1px 20px 20px 20px;
+    margin: auto;
+    padding: 20px;
     box-shadow: 9px 10px 4px rgba(0, 0, 0, 0.212);
-    border-radius: 10px;
+    border-radius: 10px;  
+    min-width: 300px;
+    max-width: 1000px;
+
 }
 
 main > h1 {
@@ -56,4 +84,9 @@ main > h2 {
     font-weight: lighter;
     background-image: linear-gradient(to right, #84E1AE, white);
     padding-left: 10px;
+}
+
+main > p {
+    text-indent: 30px;
+    font-size: 17px;
 }
