--- a/Desafio/modulo-02/d010/style.css
+++ b/Desafio/modulo-02/d010/style.css
@@ -60,7 +60,7 @@ nav > a:hover {
 }
 
 
-main {
+article {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
@@ -72,13 +72,13 @@ main {
 
 }
 
-main > h1 {
+article > h1 {
     font-family: android;
     font-weight: lighter;
     color: #063D1E;
 }
 
-main > h2 {
+article > h2 {
     font-family: android;
     color: #1A5C37;
     font-weight: lighter;
@@ -86,7 +86,8 @@ main > h2 {
     padding-left: 10px;
 }
 
-main > p {
+article > p {
     text-indent: 30px;
     font-size: 17px;
+    text-align: justify;
 }
