--- a/Desafio/modulo-02/d010/style.css
+++ b/Desafio/modulo-02/d010/style.css
@@ -7,19 +7,36 @@
     font-size: normal;
 }
 
-  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+
+:root {
+    --cor0: #EBE5C5;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fab66;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', sans-serif;
+    --fonte-android: 'Android', sans-serif;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
 body{
-    background-color: #EBE5C5;
-    margin-top: 0px;    
+    background-color: #EBE5C5;    
 }
 
 header > h1 {
     text-align: center;
     color: white;
     text-shadow: 2px 2px 0px black;
-    font-family: 'Bebas Neue', sans-serif;
+    font-family: var(--fonte-destaque);
 }
 
 header > p {
@@ -41,6 +58,8 @@ header{
 
 nav {
     text-align: left;
+    background-color: var(--cor5);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav > a {
@@ -59,27 +78,29 @@ nav > a:hover {
     color: #063D1E;
 }
 
-
-article {
+main{
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
     margin: auto;
-    padding: 20px;
     box-shadow: 9px 10px 4px rgba(0, 0, 0, 0.212);
     border-radius: 10px;  
     min-width: 300px;
     max-width: 1000px;
+    padding: 20px;
+}
 
+article {
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 article > h1 {
-    font-family: android;
+    font-family: var(--fonte-android);
     font-weight: lighter;
     color: #063D1E;
 }
 
 article > h2 {
-    font-family: android;
+    font-family: var(--fonte-android);
     color: #1A5C37;
     font-weight: lighter;
     background-image: linear-gradient(to right, #84E1AE, white);
@@ -90,4 +111,9 @@ article > p {
     text-indent: 30px;
     font-size: 17px;
     text-align: justify;
+}
+
+footer {
+    background-color: var(--cor5);
+    color: white;
 }
