--- a/Desafio/modulo-02/d010/style.css
+++ b/Desafio/modulo-02/d010/style.css
@@ -32,85 +32,121 @@ body{
     background-color: #EBE5C5;    
 }
 
-header > h1 {
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px 0px black;
-    font-family: var(--fonte-destaque);
-}
 
-header > p {
-    text-shadow: 2px 2px 0px black;
-}
 
-header{
-    background-image: linear-gradient(to bottom, #2FA665, #063D1E);
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     text-align: center;
     padding-top: 40px;
     min-height: 150px;
-    display: block;
-    font-weight: bold;
-    width: auto;
-    display: block;
+}
+
+header > h1 {
+    color: white;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.493);
+    font-family: var(--fonte-destaque);
+    margin-bottom: 20px;
+    font-size: 3em;
+}
+
+header > p {
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.493);
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    max-width: 500px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto;
 }
 
 nav {
     text-align: left;
     background-color: var(--cor5);
     font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.295);
 }
 
 nav > a {
     text-decoration: none;
-    color: #83E1AD;
-    font-weight: bold;
-    margin: 0px 20px;
-    text-align: left;  
+    color:var(--cor1);
+    font-weight: bold; 
+    padding: 10px;
+    transition-duration: .5s;
+    border-radius: 5px;
 }
 
 nav > a:hover {
-    background-color: #2FA866;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: center;
-    color: #063D1E;
+    background-color: var(--cor2);
+    color: var(--cor5);
 }
 
 main{
     background-color: white;
     margin: auto;
-    box-shadow: 9px 10px 4px rgba(0, 0, 0, 0.212);
-    border-radius: 10px;  
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+    border-bottom-left-radius: 10px;  
+    border-bottom-right-radius: 10px;
     min-width: 300px;
     max-width: 1000px;
     padding: 20px;
+    margin-bottom: 30px;
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    font-size: 1em;
+    line-height: 2em;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+main h1 {
+    font-family: var(--fonte-android);
+    font-weight: lighter;
+    color: var(--cor5);
+}
+
+main h2 {
+    font-family: var(--fonte-android);
+    color:var(--cor4);
+    font-weight: lighter;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 10px;
+}
+
+main img {
+    width: 100%;
+}
+
+main img.pequeno {
+    max-width: 350px;
+    display: block;
+    margin: auto;
 }
 
 article {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-article > h1 {
-    font-family: var(--fonte-android);
-    font-weight: lighter;
-    color: #063D1E;
-}
-
-article > h2 {
-    font-family: var(--fonte-android);
-    color: #1A5C37;
-    font-weight: lighter;
-    background-image: linear-gradient(to right, #84E1AE, white);
-    padding-left: 10px;
-}
-
-article > p {
-    text-indent: 30px;
-    font-size: 17px;
-    text-align: justify;
 }
 
 footer {
