--- a/Desafio/modulo-02/d010/style.css
+++ b/Desafio/modulo-02/d010/style.css
@@ -32,7 +32,9 @@ body{
     background-color: #EBE5C5;    
 }
 
-
+a.externo::after {
+    content:'\00A0\1F517' ;
+}
 
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
@@ -47,17 +49,19 @@ header > h1 {
     font-family: var(--fonte-destaque);
     margin-bottom: 20px;
     font-size: 3em;
+    font-weight: normal;
 }
 
 header > p {
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.493);
     color: white;
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
-    max-width: 500px;
+    max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.493);
 }
 
 nav {
@@ -92,6 +96,7 @@ main{
     max-width: 1000px;
     padding: 20px;
     margin-bottom: 30px;
+    font-family: var(--fonte-padrao);
 }
 
 main p {
@@ -113,6 +118,7 @@ main a {
     color: var(--cor5);
     background-color: var(--cor1);
     padding: 2px 6px;
+    
 }
 
 main a:hover {
@@ -122,14 +128,15 @@ main a:hover {
 
 main h1 {
     font-family: var(--fonte-android);
-    font-weight: lighter;
+    font-weight: normal;
     color: var(--cor5);
+    font-size: 1.8em;
 }
 
 main h2 {
     font-family: var(--fonte-android);
     color:var(--cor4);
-    font-weight: lighter;
+    font-weight: normal;
     background-image: linear-gradient(to right, var(--cor1), transparent);
     text-indent: 10px;
 }
@@ -144,12 +151,58 @@ main img.pequeno {
     margin: auto;
 }
 
-article {
-    background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
+div.video{
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 58%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+} 
+
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.281);
+}
+
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+aside > ul {
+    list-style-type: '\2714\00A0';
+    list-style-position: inside;
+    columns: 2;
 }
 
 footer {
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
 }
